--- a/src/App/pages/styles/AliceCarousel.css
+++ b/src/App/pages/styles/AliceCarousel.css
@@ -1,10 +1,12 @@
-.alice-carousel__dots-item:not(.__custom) {
-  background-color: #bdbdbd;
+
+
+.alice-carousel__dots-item:not(.__custom){
   height: 12px;
   width: 12px;
+  background-color: lightgray;
 }
-.alice-carousel__dots-item:not(.__custom).__active {
-  background-color: #1976d2;
-  height: 12px;
-  width: 12px;
+.alice-carousel__dots-item:not(.__custom).__active{
+    background-color: #ef6c00;
+    height: 12px;
+    width: 12px;
 }
