--- a/src/App/pages/styles/AliceCarousel.css
+++ b/src/App/pages/styles/AliceCarousel.css
@@ -6,7 +6,7 @@
   background-color: lightgray;
 }
 .alice-carousel__dots-item:not(.__custom).__active{
-    background-color: #ef6c00;
+    background-color: #D45C28;
     height: 12px;
     width: 12px;
 }
