--- a/src/App/Home/Landing/WelcomeCarousel/_styles/AliceCarousel.css
+++ b/src/App/Home/Landing/WelcomeCarousel/_styles/AliceCarousel.css
@@ -4,7 +4,7 @@
     background-color: lightgray;
 }
 .alice-carousel__dots-item:not(.__custom).__active {
-    background-color: #d45c28;
+    background-color: #2196f3;
     height: 12px;
     width: 12px;
 }
